Decode unsynch-encoded tag (ID3v2.3) and frame (ID3v2.4) data before parsing them.

BUG:138829


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@733565 283d02a7-25f6-0310-bc7c-ecb5cbfe19da